--- a/package.json
+++ b/package.json
@@ -11,7 +11,10 @@
   "license": "ISC",
   "dependencies": {
     "@fleekhq/fleek-storage-js": "^1.0.2",
+    "@textile/powergate-client": "0.1.0-beta.14",
+    "cors": "^2.8.5",
     "dotenv": "^8.2.0",
+    "express": "^4.17.1",
     "request": "^2.88.2",
     "twitter-lite": "^0.14.0"
   }
