--- a/package.json
+++ b/package.json
@@ -12,9 +12,11 @@
   "dependencies": {
     "@fleekhq/fleek-storage-js": "^1.0.2",
     "@textile/powergate-client": "0.1.0-beta.14",
+    "axios": "^0.19.2",
     "cors": "^2.8.5",
     "dotenv": "^8.2.0",
     "express": "^4.17.1",
+    "lowdb": "^1.0.0",
     "request": "^2.88.2",
     "twitter-lite": "^0.14.0"
   }
