--- a/.env.example
+++ b/.env.example
@@ -7,3 +7,10 @@ CONSUMER_API_KEY=
 CONSUMER_SECRET=
 ACCESS_TOKEN=
 ACCESS_TOKEN_SECRET=
+
+# Contracts
+ARCHIVERS_ADDRESS=
+
+# Pinata Keys
+PINATA_KEY=
+PINATA_SECRET_KEY=
