--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "@fleekhq/fleek-storage-js": "^1.0.2",
     "@textile/powergate-client": "0.1.0-beta.14",
     "axios": "^0.19.2",
+    "body-parser": "^1.19.0",
     "cors": "^2.8.5",
     "dotenv": "^8.2.0",
     "express": "^4.17.1",
