--- a/package.json
+++ b/package.json
@@ -11,18 +11,19 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "@aragon/connect": "^0.4.2",
     "@fleekhq/fleek-storage-js": "^1.0.2",
     "@textile/powergate-client": "0.1.0-beta.14",
     "axios": "^0.19.2",
     "body-parser": "^1.19.0",
+    "connect-thegraph-curated-list": "^0.3.0",
     "cors": "^2.8.5",
     "dotenv": "^8.2.0",
     "express": "^4.17.1",
     "lowdb": "^1.0.0",
     "nodemon": "^2.0.4",
-    "request": "^2.88.2",
     "twitter-lite": "^0.14.0",
-    "web3": "^1.2.10"
+    "web3": "^1.2.11"
   },
   "devDependencies": {
     "jest": "^26.1.0"
